<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AstroSmash</string>
    <string name="CoverString">AstroSmash Covers</string>
    <string name="RunButton">Run AstroSmash!</string>
    <string name="SettingsLabel">Settings</string>
    <string name="AboutButton">About Game</string>
    <string name="Radio120">120p</string>
    <string name="Radio176">176p</string>
    <string name="Radio240">240p</string>
    <string name="Radio480">480p</string>
    <string name="AutoFire">Auto Fire</string>
    <string name="Sound">Sound</string>
    <string name="Vibro">Vibration Haptics</string>
    <string name="Antialiasing">Antialiasing</string>
    <string name="TouchRect">Show Touch Rect</string>
    <string name="ColorStars">Colorize Stars</string>
    <string name="FPS">Draw FPS</string>
    <string name="GraphicsLabel">Graphics Scale</string>
    <string name="HiScoreTable">High Score Table</string>
    <string name="Player1">Player 1</string>
    <string name="Score1">0</string>
    <string name="Player2">Player 2</string>
    <string name="Score2">0</string>
    <string name="Player3">Player 3</string>
    <string name="Score3">0</string>
    <string name="Player4">Player 4</string>
    <string name="Score4">0</string>
    <string name="Player5">Player 5</string>
    <string name="Score5">0</string>
    <string name="Player6">Player 6</string>
    <string name="Score6">0</string>
    <string name="Player7">Player 7</string>
    <string name="Score7">0</string>
    <string name="Player8">Player 8</string>
    <string name="Score8">0</string>
    <string name="Player9">Player 9</string>
    <string name="Score9">0</string>
    <string name="Player10">Player 10</string>
    <string name="Score10">0</string>
    <string name="StringOK">OK</string>
    <string name="StringCancel">Cancel</string>
    <string name="HintString">Player Name</string>
    <string name="HiScoreTextHint">You get high score! Please enter your name:</string>
    <string name="GameOver">: Game Over!</string>
    <string name="Score">"Score: "</string>
    <string name="Credits3">Credits 3</string>
    <string name="Credits2">Credits 2</string>
    <string name="Credits1">Credits 1</string>
    <string name="CreditsHelp">Help</string>
    <string name="ButtonHelp">Help Game</string>
    <string name="AboutHelpLabel">About &amp; Help</string>
    <string name="Version">v1.0</string>
    <string name="IconDesc">Icon AstroSmash</string>
    <string name="AboutString">Porting from Java ME (J2ME) MIDlet to Android OS application with using SurfaceView Canvas drawing:\n• © 2016 S. \"EXL\" KLS\nemail: exl@bk.ru\nemail: exlmotodev@gmail.com\n\nSource Code:\nhttp://github.com/EXL/AstroSmash\n\nArticle About Porting AstroSmash:\nhttp://exlmoto.ru/astrosmash-droid\n\nThanks to:\n• Danil Medvedev for idea and support;\n• Nikita Prokopchik for cool photos;\n• mvb06 for testing APK-package;\n• baat for help and support;\n• Zorge.R for hosting, patience and help.</string>
    <string name="DoubleFire">Double Fire</string>

</resources>
