<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mariginLayout"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mariginLayout"
            android:contentDescription="@string/CoverString"
            android:src="@drawable/covers" />

        <Button
            android:id="@+id/gameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RunButton" />

        <TextView
            android:id="@+id/settings_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SettingsLabel" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxAutoFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AutoFire" />

            <CheckBox
                android:id="@+id/checkBoxDoubleFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DoubleFire" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxVibro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vibro" />

            <CheckBox
                android:id="@+id/checkBoxSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sound" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxAntialiasing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Antialiasing" />

            <CheckBox
                android:id="@+id/checkBoxTouchRect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TouchRect" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxColorStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ColorStars" />

            <CheckBox
                android:id="@+id/checkBoxFPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FPS" />
        </TableRow>

        <TextView
            android:id="@+id/graphics_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GraphicsLabel" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Radio120" />

            <RadioButton
                android:id="@+id/radioButton176"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Radio176" />

            <RadioButton
                android:id="@+id/radioButton240"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Radio240" />

            <RadioButton
                android:id="@+id/radioButton480"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Radio480" />
        </RadioGroup>

        <TextView
            android:id="@+id/abouthelp_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AboutHelpLabel" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mariginLayout" >

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AboutButton" />

            <Button
                android:id="@+id/buttonHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ButtonHelp" />
        </TableRow>

        <TextView
            android:id="@+id/hiscore_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HiScoreTable" />

        <TableLayout
            android:id="@+id/ButtonBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/mariginLayout"
            android:layout_marginTop="@dimen/mariginLayout" >

            <TableRow android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/PlayerNames"
                    android:layout_height="wrap_content"
                    android:text="@string/Players"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:id="@+id/PlayerScores"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/Scores"
                    android:textSize="@dimen/textSize" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>