<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Score"
        android:layout_margin="@dimen/mariginLayout"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewHiScoreHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HiScoreTextHint"
        android:layout_margin="@dimen/mariginLayout"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mariginLayout"
        android:ems="10"
        android:hint="@string/HintString" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:id="@+id/ButtonBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/mariginLayout"
        android:layout_marginTop="@dimen/mariginLayout" >

        <TableRow android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StringOK" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StringCancel" />
        </TableRow>
    </TableLayout>

</LinearLayout>
